bodhilibrs_frompyo3/tests/ui/error-unsupported-field-tuple.stderr
error: Unsupported field format, only named fields supported
 --> tests/ui/error-unsupported-field-tuple.rs:4:33
  |
4 | struct TestUnsupportedFieldTuple(i32, i32);
  |                                 ^^^^^^^^^^
