bodhilibrs_frompyo3/tests/ui/error-unsupported-field-tuple.rs
use frompyo3::FromPyO3;

#[derive(FromPyO3)]
struct TestUnsupportedFieldTuple(i32, i32);

fn main() {}
